umol-models-graph/tests/resolution/snapshots/resolution__resolution_suite__run_conformance_test@atoms_cf.snap
---
source: umol-models-graph/tests/resolution/mod.rs
expression: results
---
category: atoms
atom_typing:
  success: true
  summary:
    atom_count: 1
    bond_count: 0
    topology: "@"
    atoms:
      - "Cf#n4#u4"
    bonds: []
counts:
  success: true
  summary:
    atom_count: 1
    bond_count: 0
    topology: "@"
    atoms:
      - "Cf#n6"
    bonds: []
