umol-models-graph/tests/resolution/snapshots/resolution__resolution_suite__run_conformance_test@atoms_cm.snap
---
source: umol-models-graph/tests/resolution/mod.rs
expression: results
---
category: atoms
atom_typing:
  success: true
  summary:
    atom_count: 1
    bond_count: 0
    topology: "@"
    atoms:
      - "Cm#n#u8"
    bonds: []
counts:
  success: true
  summary:
    atom_count: 1
    bond_count: 0
    topology: "@"
    atoms:
      - "Cm#n5"
    bonds: []
